atualização do css

--- a/desafios/desafio12/pacote-d012/style.css
+++ b/desafios/desafio12/pacote-d012/style.css
@@ -5,10 +5,103 @@
 }  
 
  @font-face {
-  font-family: Soda;
+  font-family: 'Soda';
   src: url(fontes/Coffee-Soda-104726997/Coffee\ Soda.otf) format(opentype);
  } 
 
+ @font-face {
+  font-family: 'Paradise';
+  src: url(fontes/happy_paradise/Happy\ Paradise.otf) format(opentype);
+ }
+
 h1 {
-  font-family: 'Soda';
+
+    font-family: 'Soda';
+    margin-bottom: 20px;
+
+}
+
+div#cabecalho {
+
+    margin: auto;
+    text-align: center;
+    padding: 50px;
+    width:702px;
+    background-color: black;
+    color: white;
+
+}
+
+
+main {
+
+    margin: auto;
+    padding: 50px;
+    width: 702px;
+    max-width: 700px;
+    text-align: justify;
+    text-align: left;
+    border: 1px solid black;
+    font-family: 'Paradise';
+    font-weight: bold;
+
+}
+
+
+section {
+
+    padding: 200px;
+
+}
+
+section.brn {
+
+  font-size: 25px;
+  margin-left: -32%;
+
+}
+
+section#planoflor {
+
+    background: black url(imagens/background001.jpg) right center no-repeat fixed;
+    background-size: cover;
+    margin: 0px -51px;
+}
+
+section#planoflor > p {
+
+  font-size: 25px;
+  margin-left: -49%;
+  color: white;
+  background-color: #0000006c;
+  width: 300px;
+  padding: 25px;
+
+}
+
+section#planolivro {
+
+  background: black url(imagens/background002.jpg) right center no-repeat fixed;
+  background-size: cover;
+  margin: 0px -51px;
+
+}
+
+section#planolivro > p {
+
+  font-size: 25px;
+  margin-left: -50%;
+  color: white;
+  background-color: #0000006c;
+  width: 300px;
+  padding: 25px;
+
+}
+
+footer {
+
+  background-color: black;
+  text-align: center;
+  padding: 10px;
+  color: white;
 }
