--- a/desafios/desafio12/pacote-d012/style.css
+++ b/desafios/desafio12/pacote-d012/style.css
@@ -14,10 +14,31 @@
   src: url(fontes/happy_paradise/Happy\ Paradise.otf) format(opentype);
  }
 
+ body {
+
+  min-height: 100vh;
+
+ }
+
 h1 {
 
     font-family: 'Soda';
     margin-bottom: 20px;
+    font-variant: small-caps;
+    font-size: 3em;
+
+}
+
+a {
+
+  text-decoration: none;
+  color: white;
+
+}
+
+a:hover {
+
+  text-decoration: underline;
 
 }
 
@@ -38,7 +59,6 @@ main {
     margin: auto;
     padding: 50px;
     width: 702px;
-    max-width: 700px;
     text-align: justify;
     text-align: left;
     border: 1px solid black;
