--- a/desafios/desafio15/style.css
+++ b/desafios/desafio15/style.css
@@ -1,32 +1,45 @@
 @charset "UTF-8";
 
+* {
+
+  margin: 0px;
+  padding: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+html, body {
+
+    height: 100vh;
+    width: 100vw;
+
+}
+
 body {
 
-    font-family: Arial, Helvetica, sans-serif;
-    background-image: url(imagens/fundo-madeira.jpg);
+  background-image: url(imagens/fundo-madeira.jpg);
+  background-repeat: no-repeat top center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
-div#iphone {
+
+main {
 
     position: relative;
-    background-image: url(imagens/frame-iphone.png);
-    width: 308px;
-    height: 618px;
-    margin: auto;
-    background-repeat: no-repeat;
-    display: flex;
-    margin-top: 10em;
-    justify-content: center;
+    height: 100vh;
+
 
 }
 
+section#telefone {
 
-div#iphone > iframe {
-
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  width: 265px;
-  height: 535px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 627px;
+    width: 311px;
+    background-image: url(imagens/frame-iphone.png);
+    background-repeat: no-repeat;
 
 }
