--- a/desafios/desafio15/style.css
+++ b/desafios/desafio15/style.css
@@ -51,4 +51,31 @@ iframe#tela {
     left: 22px;
     width: 269px;
     height: 471px;
+
+}
+
+section#redes-sociais {
+
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    text-align: right;
+  
+}
+
+section#redes-sociais img:hover {
+
+    border: 2px solid rgba(255, 255, 255, 0.644);
+    transform: translate(-3px, -3px);
+    transition: 0.3s;
+}
+
+img {
+
+    width: 50px;
+    height: 50px;
+    box-sizing: border-box;
+    margin-top: 15px;
+    border-radius: 100%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.603);
 }
