--- a/exercicios/ex026/mq004/estilos/media-query.css
+++ b/exercicios/ex026/mq004/estilos/media-query.css
@@ -1,3 +1,87 @@
 @charset "UTF-8";
 
 /* Todas demais mídias*/
+
+
+/*Typical Device Breakpoints
+
+Pequenas telas: até 600 px
+Celular: de 600 px até 768px
+Tablet:  769px até 992px
+Desktop: 992px até 1200px
+Grandes telas: acima de 1200px
+
+*/
+
+@media print {
+
+    * {
+
+        font-family: 'Courier New', Courier, monospace;
+
+    }
+
+    body::after {
+
+        content: Essa impressão foi feito pelo DEV Robert Querino;
+        text-decoration: overline;
+        
+    }
+
+    main {
+
+        border: 2px solid black;
+
+    }
+
+    main h1 {
+
+        text-shadow: none;
+        color: black;
+
+    }
+
+    img#phone { display: none;}
+    img#print { display: block;}
+
+}
+
+@media screen and (min-width: 600px) and (max-width: 992px) {  /* Tablet */
+
+    body {
+
+        background-image: url(../imagens/back-tablet.jpg);
+        
+    }
+
+    img#phone { display: none;}
+    img#tablet { display: block;}
+
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) { /* Desktop */
+
+    body {
+
+        background-image: url(../imagens/back-pc.jpg);
+
+    }
+
+    img#phone { display: none;}
+    img#pc { display: block;}
+
+}
+
+@media screen and (min-width: 1200px) { /* Grande telas */
+
+
+    body {
+
+        background-image: url(../imagens/back-tv.jpg);
+
+    }
+
+    img#phone { display: none;}
+    img#tv { display: block;}
+
+}
