--- a/desafios/desafio16/estilos/style.css
+++ b/desafios/desafio16/estilos/style.css
@@ -22,12 +22,15 @@ section#login {
 
 }
 
-img {
+div#imagem > img {
 
     display: block;
     margin: auto;
-    width: 300px;
-    height: 280px;
+    width: 40vw;
+    min-width: 300px;
+    height: 30vh;
+    min-height: 280px;
+    transition: 0.1s;
     border-radius:  20px 20px 0px 0px;
 
 }
@@ -37,8 +40,11 @@ div#formulario {
     display: flex;
     flex-direction: column;
     position: relative;
-    width: 300px;
-    height: 410px;
+    width: 40vw;
+    height: 42vh;
+    min-width: 300px;
+    min-height: 410px;
+    transition: 0.1s;
     margin: auto;
     border-radius: 0px 0px 20px 20px;
     padding-top: 20px;
