--- a/desafios/desafio16/estilos/media-query.css
+++ b/desafios/desafio16/estilos/media-query.css
@@ -23,44 +23,70 @@ Grandes telas: acima de 1200px
 
 @media screen and (min-width: 780px) and (max-width: 1100px) {
 
-    section#login {
+    section#login{
 
         display: flex;
         flex-direction: row;
         position: fixed;
+        position: relative;
+        margin-left: 250px;
 
     }
 
-    div#imagem > img {
+    section#login div#formulario {
 
-        display: inline;
-        margin: auto;
-        width: 25vw;
-        min-width: 270px;
-        height: 400px;
-        padding-bottom: 10px;
-        margin-left: 50px; 
-        transition: 0.1s;
-        border-radius:  20px 0px 0px 20px;
-    
-    }
-    
-    div#formulario {
-    
-        display: flex;
-        flex-direction: column;
+        position: absolute;
+        top: 50%;
+        right: 15%;
         width: 55vw;
-        height: 370px;
-        min-height: 365px;
-        padding-bottom: 10px;
-        transition: 0.1s;
-        border-radius: 0px 20px 20px 0px;
-        text-align: center;
-        background-color: white;
-    
+        max-width: 600px;
+        height: 400px;
+        border-radius: 0px 10px 10px 0px;
+
     }
 
+    section#login div#imagem > img {
 
+        position: absolute;
+        right: 80%;
+        width: 25vw;
+        height: 430px;
+        border-radius: 10px 0px 0px 10px;
+    }
     
+}
+
+@media screen and (min-width: 1100px) {
+
+    section#login{
+
+        display: flex;
+        flex-direction: row;
+        position: fixed;
+        position: relative;
+        margin-left: 250px;
+
+    }
+
+    section#login div#formulario {
+
+        position: absolute;
+        top: 50%;
+        right: 50%;
+        width: 55vw;
+        max-width: 750px;
+        height: 430px;
+        border-radius: 10px 0px 0px 10px;
+
+    }
+
+    section#login div#imagem > img {
+
+        position: absolute;
+        right: 25%;
+        width: 25vw;
+        height: 450px;
+        border-radius: 0px 10px 10px 0px;
+    }
 }
 
